[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[features]
async = ["futures"]

[profile.test]
default = ["async"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.28", optional = true }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
chrono = { version = "0.4.19", features = ["serde"] }
fake = { version = "2.6", features = ["chrono"] }
