[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[features]
async = ["futures"]
real_blackbox = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.28", optional = true }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
chrono = { version = "0.4.26", features = ["serde"] }
fake = { version = "2.6.1", features = ["chrono"] }
tokio = { version = "1.29.1", features = ["macros"] }

# windows target
[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]}
